update content; add github action

--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -90,6 +90,11 @@
   Dates: April 28-30, 2020
   Locat: Denver, CO, USA
   Notes: Postponed, new date TBD
+- Acade: Meeting on Langauge in Autism (MoLA)
+  Annou: http://mola2020.org/urgent/
+  Dates: March 12-14
+  Locat: Durham, NC, USA
+  Notes: Postponed indefinitely
 - Acade: Northwest Anthropological Conference (NWAC)
   Annou: https://www.nwaconference.com/nwac-2020
   Dates: March 25-28, 2020
@@ -124,7 +129,12 @@
 - Acade: Classical Association of New England Annual Meeting
   Annou: https://caneweb.org/new/?page_id=3751
   Dates: "March 13\u201314"
-  Locat: Hartford CT USA
+  Locat: Hartford, CT USA
+  Notes: Cancelled
+- Acade: Sociolinguistics Symposium 23
+  Annou: https://www.ss23hk.com/
+  Dates: June 16-19, 2020
+  Locat: Hong Kong
   Notes: Cancelled
 - Acade: American Society for Clinical Pharmacology & Therapeutics Annual Meeting
   Annou: https://www.ascpt.org/Resources/ASCPT-News/View/ArticleId/24686/Message-Regarding-ASCPT-2020
@@ -295,6 +305,11 @@
   Dates: March 18-21, 2020
   Locat: Santa Rosa, CA
   Notes: Cancelled
+- Acade: New College Conference on Medieval & Renaissance Studies
+  Annou: http://www.newcollegeconference.org/
+  Dates: March 12-14 2020
+  Locat: Sarasota, FL USA
+  Notes: Cancelled
 - Acade: Educause Learning Initiative (ELI) Annual Meeting
   Annou: https://events.educause.edu/eli/annual-meeting/2020
   Dates: March 2-4, 2020
@@ -351,10 +366,10 @@
   Dates: March 30 - April 2 2020
   Locat: Stockholm, Sweden
   Notes: Postponed to September 2020
-- Acade: Lunar and Planetary Science Conference
-  Annou: https://www.hou.usra.edu/meetings/lpsc2020/attendee/coronavirus-update.shtml
-  Dates: March 16-20, 2020
-  Locat: The Woodlands, TX, USA
+- Acade: Perinatal Society of Australia and New Zealand
+  Annou: https://web.cvent.com/event/71fe9307-c088-46ee-99ed-cc19660a089d/websitePage:b258d600-e354-4008-a91c-0df69cce8b1d
+  Dates: April 5-8, 2020
+  Locat: Sydney, Australia
   Notes: Cancelled
 - Acade: Critical Librarianship & Pedagogy Symposium
   Annou: https://docs.google.com/document/d/127g2lHcE7_mn1mV3NDEp7Fe83iXklzjUSkGJ9ehx0QE/edit
@@ -386,10 +401,20 @@
   Dates: Various
   Locat: Various
   Notes: Cancelled
+- Acade: GRC Basal Ganglia
+  Annou: E-mail from Gordon Research Conferences
+  Dates: March 8-13, 2020
+  Locat: Ventura CA, USA
+  Notes: Cancelled
 - Acade: OCLC Library Futures Conference (EMEARC 2020)
   Annou: https://www.oclc.org/en/events/councils/2019-20/library-futures-vienna.html
   Dates: March 2-5, 2020
   Locat: Vienna, Austria
+  Notes: Cancelled
+- Acade: GURT (Georgetown University Roundtable on Languages and Linguistics)
+  Annou: ''
+  Dates: March 13-15, 2020
+  Locat: Washington, DC, USA
   Notes: Cancelled
 - Acade: "Land and Poverty Conference \u201CInstitution for Equity and Resilience\u201D"
   Annou: https://www.worldbank.org/en/events/2020/03/16/land-and-poverty-conference-2020-institutions-for-equity-and-resilience
@@ -402,6 +427,11 @@
   Locat: Washington, DC, USA
   Notes: 'Physical conference is cancelled, it will now be a virtual conference. Not
     all presentations will be made virtual though, just some. '
+- Acade: The 51st Lunar and Planetary Science Conference
+  Annou: https://www.hou.usra.edu/meetings/lpsc2020/
+  Dates: March 16-20, 2020
+  Locat: Woodlands, TX, USA
+  Notes: Cancelled
 - Acade: 2020 ASIS&T Asia-Pacific Regional Conference
   Annou: https://www.asist.org/chapters/asiapac/events/2020-regional-meeting/
   Dates: May 24-25, 2020
