--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Regenerating content. The commit would fail if nothing changes
       run: |
         echo this is a simple workflow which will run automatically upon each push.
-        pip3 install yaml
+        pip3 install pyyaml
         ./download.sh
 
     - name: Commit files
