--- a/.github/workflows/sync-google-sheet.yml
+++ b/.github/workflows/sync-google-sheet.yml
@@ -26,7 +26,12 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git commit -m "Action: download and update information" -a
+        try {
+          git commit -m "Action: download and update information" -a
+        } catch (error) {
+          echo $error.message
+          exit 0
+        }
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
