--- a/.github/workflows/sync-google-sheet.yml
+++ b/.github/workflows/sync-google-sheet.yml
@@ -26,10 +26,12 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        result =`git status`
+        if $result On branch master Your branch is up to date with 'origin/master'. nothing to commit, working tree clean
         try {
           git commit -m "Action: download and update information" -a
-        } catch (error) {
-          echo $error.message
+        } catch {
+          echo "nothing to commit"
           exit 0
         }
     - name: Push changes
