--- a/.github/workflows/sync-google-sheet.yml
+++ b/.github/workflows/sync-google-sheet.yml
@@ -21,17 +21,15 @@ jobs:
         pip3 install --upgrade setuptools
         pip3 install pyyaml
         ./download.sh
+        echo "finish updating" >> action.log
+        date >> action.log
 
     - name: Commit files
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"        
-        try {
-          git commit -m "Action: download and update information" -a
-        } catch {
-          echo "nothing to commit"
-          exit 0
-        }
+        git commit -m "Action: download and update information" -a
+
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
