--- a/.github/workflows/sync-google-sheet.yml
+++ b/.github/workflows/sync-google-sheet.yml
@@ -21,7 +21,8 @@ jobs:
         pip3 install --upgrade setuptools
         pip3 install pyyaml
         ./download.sh
-        echo "finish updating" >> action.log
+        echo "-------- git status ---------" >> action.log
+        git status >> action.log
         date >> action.log
 
     - name: Commit files
