--- a/.github/workflows/sync-google-sheet.yml
+++ b/.github/workflows/sync-google-sheet.yml
@@ -2,8 +2,8 @@ name: sync updates from google sheet
 
 
 on: 
-  push:
-    branches: master
+  #push:
+  #  branches: master
   schedule:
     - cron: '*/10 * * * *'
       
